<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Work Notifier</string>
    <string name="send_test_notification">Send Test Notification</string>
    <string name="select_apps">Select Apps</string>
    <string name="notification_channel_name">Messages</string>
    <string name="notification_channel_description">Notifications for messages</string>
    <string name="test_notification_title">Test Message</string>
    <string name="test_notification_content">This is a test notification for Android Auto</string>
    <string name="test_notification_sender">Work Notifier</string>
    <string name="reply_action">Reply</string>
    <string name="mark_as_read_action">Mark as Read</string>
    <string name="notification_posted">Test notification sent!</string>
    <string name="select_apps_placeholder">Feature coming soon</string>

    <!-- Intercepted Apps Activity -->
    <string name="intercepted_apps_title">Intercepted Notifications</string>
    <string name="intercepted_apps_header">Intercepted Apps</string>
    <string name="intercepted_status">Intercepted %1$d apps, %2$d notifications</string>
    <string name="no_apps_intercepted">No apps intercepted yet</string>
    <string name="no_intercepted_notifications">No notifications intercepted yet.\n\nEnable notification access and wait for notifications from other apps.</string>
    <string name="enable_notification_access">Enable Notification Access</string>
    <string name="app_icon_description">App icon</string>
    <string name="no_title">(No title)</string>
    <string name="no_content">(No content)</string>
    <string name="work_profile_badge">WORK</string>
    <string name="private_profile_badge">PRIVATE</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="collapse_notifications">Collapse</string>
    <string name="expand_notifications">Expand</string>
    <string name="dismiss">Dismiss</string>
    <string name="dismiss_app">Dismiss App</string>
    <string name="disable_app">Disable App</string>
    <string name="mimic">Mimic</string>
    <string name="load_more">Load More</string>
    <string name="mimic_notifications_description">Enable notification mimicking for this app</string>
    <string name="manage_disabled_apps">Manage Disabled Apps</string>
    <string name="disabled_apps_title">Disabled Apps</string>
    <string name="no_disabled_apps">No disabled apps</string>
    <string name="enable_app">Enable</string>

    <!-- Regex Filters -->
    <string name="show_filters">Show Filters</string>
    <string name="hide_filters">Hide Filters</string>
    <string name="filter_logic_explanation">Include = must match (allowlist), Exclude = must NOT match (blocklist). Regex patterns supported.</string>
    <string name="include_patterns_label">Include Patterns (allowlist)</string>
    <string name="exclude_patterns_label">Exclude Patterns (blocklist)</string>
    <string name="add_include_pattern">+ Add Include Pattern</string>
    <string name="add_exclude_pattern">+ Add Exclude Pattern</string>
    <string name="pattern_hint">Enter regex pattern</string>
    <string name="remove_pattern">Remove</string>
    <string name="match_title">Title</string>
    <string name="match_content">Content</string>

    <!-- Android Auto Settings -->
    <string name="android_auto_only_mode">Android Auto Only Mode</string>
    <string name="android_auto_only_description">When enabled, mimic notifications are only generated when connected to Android Auto. Notifications are still intercepted at all times.</string>
    <string name="android_auto_status_checking">Checking Android Auto status…</string>
    <string name="android_auto_status_connected">Android Auto: Connected (%s)</string>
    <string name="android_auto_status_not_connected">Android Auto: Not Connected</string>

    <!-- Private Launcher -->
    <string name="private_launcher">Private Launcher</string>
    <string name="private_launcher_title">Private App Shortcuts</string>
    <string name="private_launcher_description">Tap any app to create a launcher shortcut on your home screen.</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="no_private_apps_found">No Private Space apps found.\n\nMake sure Private Space is unlocked.\n\nIf root access is available, all apps will be shown.\nOtherwise, only apps that have sent notifications are shown.</string>

    <!-- DND and Bedtime Mode Test -->
    <string name="test_dnd_bedtime">Test DND &amp; Bedtime</string>
</resources>
