<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".PrivateLauncherActivity">

    <TextView
        android:id="@+id/tvPrivateLauncherTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/private_launcher_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvPrivateLauncherDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/private_launcher_description"
        android:textSize="14sp"
        android:textColor="?android:attr/textColorSecondary"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPrivateLauncherTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvEmptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_private_apps_found"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorSecondary"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPrivateApps"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPrivateLauncherDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_private_app" />

</androidx.constraintlayout.widget.ConstraintLayout>
